Sun Oct 30 05:31:01 UTC 2006  Ossama Othman  <ossama_othman at symantec.com>

        * ace/Auto_Ptr.h (ACE_auto_ptr_reset):

          Adjusted function template arguments to handle case where the
          auto_ptr element type and pointer type passed to this function
          are not the same.  Addresses argument deduction failures.

        * ace/Truncate.h (Truncator):

          Added explicit specializations for int and long for Borland.
          Relying on ACE_{U}INT32 specializations is not sufficient.

Sun Oct 29 17:10:39 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:
          Added Bug 2654 regression test to suite.

Sat Oct 28 20:50:56 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/Threads/thread_specific.cpp: Need to reinterpret_cast a
          pointer back to an intptr_t.

Sat Oct 28 20:10:42 UTC 2006  Steve Huston  <shuston@riverace.com>

        * bin/make_release: Added Smartphone configurations to the WinCE
          project files generated at release time.

Sat Oct 28 13:50:01 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Select_Reactor_Base.cpp:

          Fix to address Win32-specific problems in bug 2653 fix.

Sat Oct 28 01:48:27 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Add -L$(INSLIB) to LDFLAGS
          if it was not there already. Allows link to work when built libraries
          are moved to locations other than the default $(ACE_ROOT)/lib
          location.

Fri Oct 28 03:23:18 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * apps/JAWS2/JAWS/FILE.cpp:
        * apps/JAWS2/JAWS/FILE.h:
        * apps/JAWS2/JAWS/IO.cpp:
        * apps/JAWS3/jaws3/FILE.cpp:
        * apps/JAWS3/jaws3/FILE.h:
        * examples/Threads/thread_manager.cpp:
        * examples/Threads/cancel.cpp:
        * examples/Threads/thread_specific.cpp: